[tool.poetry]
name = "url-shortener-mvc"
version = "0.1.0"
description = "URL shortener using MVC arch"
authors = ["Vladimir Khanov <fairflays@gmail.com>"]
readme = "README.md"
packages = [{include = "url_shortener_mvc"}]

[tool.flake8]
max-line-length = 120
max-complexity = 10

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
isort = "^5.12.0"
black = "^23.7.0"
flake8 = "^6.0.0"
pyproject-flake8 = "^6.0.0.post1"
mypy = "^1.4.1"
pydantic = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
